--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Pick you favorite plant" />
-    <meta name="keywords" content="planta, jardinaria" />
+    <meta name="keywords" content="planta, jardineria" />
     <meta name="author" content="lucrealoi" />
     <meta name="copyright" content="bloom" />
 
@@ -91,7 +91,7 @@
                     >
                   </li>
                   <li>
-                    <a href="./pages/about.html" class="navbar-link">About</a>
+                    <a href="#about" class="navbar-link">About</a>
                   </li>
                 </ul>
               </div>
@@ -240,7 +240,8 @@
                 </div>
               </div>
             </div>
-          </div> -->
+          </div>
+          -->
           <!-- <div class="grid-section-2">
             <img
               src="./assets/images/indoor-plants.jpg"
@@ -263,45 +264,53 @@
               class="grid-section-2-img"
             />
           </div> -->
-          <div class="cards-section-2">
-            <div class="card" style="width: 16rem">
-              <img
-                src="./assets/images/indoor-plants.jpg"
-                class="card-img-top"
-                alt="..."
-              />
-              <div class="card-body">
-                <p class="card-text">Indoor plants</p>
+          <div class="cards-section-2x row">
+            <div class="col-12 col-sm-6 col-md-3">
+              <div class="card">
+                <img
+                  src="./assets/images/indoor-plants.jpg"
+                  class="card-img-top"
+                  alt="..."
+                />
+                <div class="card-body">
+                  <p class="card-text">Indoor plants</p>
+                </div>
               </div>
             </div>
-            <div class="card" style="width: 16rem">
-              <img
-                src="./assets/images/outdoor-plants.png"
-                class="card-img-top"
-                alt="..."
-              />
-              <div class="card-body">
-                <p class="card-text">Indoor plants</p>
+            <div class="col-12 col-sm-6 col-md-3">
+              <div class="card">
+                <img
+                  src="./assets/images/outdoor-plants.png"
+                  class="card-img-top"
+                  alt="..."
+                />
+                <div class="card-body">
+                  <p class="card-text">Indoor plants</p>
+                </div>
               </div>
             </div>
-            <div class="card" style="width: 16rem">
-              <img
-                src="./assets/images/pet.jpg"
-                class="card-img-top"
-                alt="..."
-              />
-              <div class="card-body">
-                <p class="card-text">Indoor plants</p>
+            <div class="col-12 col-sm-6 col-md-3">
+              <div class="card">
+                <img
+                  src="./assets/images/pet.jpg"
+                  class="card-img-top"
+                  alt="..."
+                />
+                <div class="card-body">
+                  <p class="card-text">Indoor plants</p>
+                </div>
               </div>
             </div>
-            <div class="card" style="width: 16rem">
-              <img
-                src="./assets/images/gift.png"
-                class="card-img-top"
-                alt="..."
-              />
-              <div class="card-body">
-                <p class="card-text">Indoor plants</p>
+            <div class="col-12 col-sm-6 col-md-3">
+              <div class="card">
+                <img
+                  src="./assets/images/gift.png"
+                  class="card-img-top"
+                  alt="..."
+                />
+                <div class="card-body">
+                  <p class="card-text">Indoor plants</p>
+                </div>
               </div>
             </div>
           </div>
@@ -329,7 +338,7 @@
           <li>Delivery & returns</li>
           <li>Plant blog</li>
           <li>
-            <a href="./pages/plants.html"
+            <a href="./pages/plants.html" class="text-decoration-none"
               ><img src="./assets/images/instagram-icon.png" alt="" />
               <span> </span>
               <img src="./assets/images/twitter-logo.png" alt="" />
