--- a/pages/contact.html
+++ b/pages/contact.html
@@ -42,7 +42,7 @@
         <div class="d-flex align-items-center">
           <a
             href="../index.html"
-            class="w-100 d-flex align-items-center text-decoration-none"
+            class="w-100 d-flex align-items-center text-decoration-none bloomLink"
           >
             <img class="logo-img" src="../assets/images/logo.png" alt="" />
             <h1>bloom</h1>
@@ -65,7 +65,7 @@
                   >
                 </li>
                 <li>
-                  <a href="../pages/about.html" class="navbar-link">About</a>
+                  <a href="../index.html" class="navbar-link">About</a>
                 </li>
               </ul>
               <div class="btn-group navbar-menu">
@@ -93,7 +93,7 @@
                     >
                   </li>
                   <li>
-                    <a href="./pages/about.html" class="navbar-link">About</a>
+                    <a href="../index.html" class="navbar-link">About</a>
                   </li>
                 </ul>
               </div>
@@ -116,7 +116,7 @@
           <form id="contactForm">
             <!-- Name input -->
             <div class="row">
-              <div class="mb-3 col">
+              <div class="mb-3 col-12 col-md-6">
                 <input
                   class="form-control form-background"
                   id="name"
@@ -126,6 +126,7 @@
               </div>
 
               <!-- Email address input -->
+
               <div class="mb-3 col">
                 <input
                   class="form-control"
