--- a/pages/plants.html
+++ b/pages/plants.html
@@ -38,7 +38,7 @@
         <div class="d-flex align-items-center">
           <a
             href="../index.html"
-            class="w-100 d-flex align-items-center text-decoration-none"
+            class="w-100 d-flex align-items-center text-decoration-none bloomLink"
           >
             <img class="logo-img" src="../assets/images/logo.png" alt="" />
             <h1>bloom</h1>
@@ -78,18 +78,16 @@
                     <a href="./pages/plants.html" class="navbar-link">Plants</a>
                   </li>
                   <li>
-                    <a href="./pages/care.html" class="navbar-link">Care</a>
+                    <a href="./care.html" class="navbar-link">Care</a>
                   </li>
                   <li>
-                    <a href="./pages/gifts.html" class="navbar-link">Gifts</a>
+                    <a href="./gifts.html" class="navbar-link">Gifts</a>
                   </li>
                   <li>
-                    <a href="./pages/contact.html" class="navbar-link"
-                      >Contact</a
-                    >
+                    <a href="./contact.html" class="navbar-link">Contact</a>
                   </li>
                   <li>
-                    <a href="./pages/about.html" class="navbar-link">About</a>
+                    <a href="../index.html" class="navbar-link">About</a>
                   </li>
                 </ul>
               </div>
@@ -128,24 +126,33 @@
     </main>
     <footer>
       <div>
-        <ul class="footer-links">
+        <ul class="footer-links fs-5">
           <li>About</li>
           <li>Contact</li>
           <li>Reviews</li>
         </ul>
       </div>
-      <div>
-        <ul class="footer-links">
+      <div class="text-center">
+        <ul class="footer-links fs-5">
           <li>Join Bloom</li>
-          <li>Contact</li>
-          <li>Reviews</li>
+          <li class="fs-6">Sign up for special offers and inspiration</li>
+          <input type="text" class="my-3 fs-6" placeholder="Enter your email" />
         </ul>
       </div>
       <div>
-        <ul class="footer-links">
-          <li>Join Bloom</li>
-          <li>Contact</li>
-          <li>Reviews</li>
+        <ul class="footer-links fs-5">
+          <li>Delivery & returns</li>
+          <li>Plant blog</li>
+          <li>
+            <a href="./pages/plants.html" class="text-decoration-none"
+              ><img src="./assets/images/instagram-icon.png" alt="" />
+              <span> </span>
+              <img src="./assets/images/twitter-logo.png" alt="" />
+              <span> </span>
+              <img src="./assets/images/linkedin-logo.png" alt="" />
+            </a>
+          </li>
+          <!-- <li>Reviews</li> -->
         </ul>
       </div>
     </footer>
