--- a/index.html
+++ b/index.html
@@ -103,9 +103,7 @@
     <main>
       <!--main-section-->
       <section class="main-picture">
-        <h2 class="title">
-          You pick your favorite plant,<br />we help you take care of it.
-        </h2>
+        <h2 class="title">HOLA</h2>
       </section>
       <!--main-section-2-->
       <div id="about" />
