--- a/index.html
+++ b/index.html
@@ -103,7 +103,9 @@
     <main>
       <!--main-section-->
       <section class="main-picture">
-        <h2 class="title">HOLA</h2>
+        <h2 class="title">
+          You pick your favorite plant,<br />we help you take care of it.
+        </h2>
       </section>
       <!--main-section-2-->
       <div id="about" />
